src/css/hack.css
@import "reset.css";
@import "all.min.css";

html {
  font-size: 62.5%;
}

body {
  -webkit-text-size-adjust: none;
  color: #fffcf7;
  font-size: 1.6em;
  font-weight: 300;
  line-height: 1.7;
}

body {
  background-color: #1d1e22;
  color: #fffcf7;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 10px;
}

.main-content {
  box-sizing: border-box;
  max-width: 900px;
  padding: 20px;
  width: 100%;
}

.main-content p {
  font-size: 90%;
}

h1 {
  color: #feb454;
  font-weight: 400;
  margin: 0 0 1rem;
  font-size: 2.8rem;
  line-height: 1.3;
}

a {
  color: #a8c7fa;
  text-decoration: none;
}

a.title {
  color: #feb454;
  text-decoration: none;
}

.social-media {
  display: flex;
  list-style: none;
  padding: 0;
  margin-top: 20px;
}

.social-media li {
  margin-right: 20px;
}

.social-icon {
  display: inline-block;
  color: #5e5e5e;
  font-size: 28px;
  text-decoration: none;
  transition:
    background-color 0.3s ease,
    color 0.3s ease;
}

.social-icon:hover {
  color: #a8c7fa;
}

.social-icon .label {
  display: none;
}

/* Media Queries */
@media (min-width: 600px) {
  /* Adjust for tablets */
  .main-content {
    width: 50%;
  }
}

@media (min-width: 1024px) {
  /* Adjust for larger screens */
  .main-content {
    max-width: 800px;
  }

  .container {
    justify-content: left;
    align-items: center;
  }
}

